--- a/Movimiento/www/index.html
+++ b/Movimiento/www/index.html
@@ -17,7 +17,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 <!--  <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>-->
      <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
-
+     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
